# ETHUSDC_BotV3_Hermes

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PROJECT_CONTRACT.md  README.md  START_DASHBOARD.bat  progress-patch-pytest.txt  pyproject.toml
.github/: patch_backtest_ui.py  pull_request_template.md  task30-closeout-trigger-v2.txt  task30-closeout-trigger.txt  task30-final-ready.txt  task31-attestation-diagnostic-result.txt  task31-checkpoint-diagnostic-result.txt  task31-final-persistence-diagnostic-result.txt  task31-final-report-diagnostic-result.txt  task31-final-trigger.txt  task31-full-ci-result.txt  task31-full-ci-trigger.txt  task31-identity-diagnostic-result.txt  task31-serialization-trigger.txt
config/: data_catalog.example.toml  default.toml  local.example.toml  raw_data_manifest.example.json
configs/: protocol_v3_acceptance_contract.json  protocol_v3_artifact_store_contract.json  protocol_v3_candidate_matrix_contract.json  protocol_v3_context_parity_contract.json  protocol_v3_contract.json  protocol_v3_current_refit_contract.json  protocol_v3_data_snapshot_contract.json  protocol_v3_dsr_contract.json  protocol_v3_execution_parity_contract.json  protocol_v3_feature_store_contract.json  protocol_v3_historical_diagnostics_contract.json  protocol_v3_historical_trial_lower_bound.json  protocol_v3_inner_fold_contract.json  protocol_v3_inner_selection_contract.json  protocol_v3_intrabar_execution_contract.json  protocol_v3_legacy_multiplicity_contract.json  protocol_v3_monthly_quality_gate_contract.json  protocol_v3_opportunity_regime_contract.json  (+19 more)
(+542 files in other folders)
