[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ethusdc-bot-v3-hermes"
version = "0.1.0"
description = "Controlled local ETHUSDC Binance Spot LONG-only bot project skeleton. Live trading locked."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "ETHUSDC_BotV3_Hermes" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
